force-app/main/default/objects/Answer_2__c/Answer_2__c.object-meta.xml
<CustomObject>
    <label>Answer 2</label>
    <nameField>
        <label>Answer 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answer 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>