force-app/main/default/objects/Answer_2__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Answer 2</relationshipLabel>
    <relationshipName>Answer_2</relationshipName>
    <type>Lookup</type>
</CustomField>