force-app/main/default/objects/Answer_2__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <label>Question 2</label>
    <referenceTo>Question_2__c</referenceTo>
    <relationshipLabel>Answer 2</relationshipLabel>
    <relationshipName>Answer_2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>